# scg-agent

./: Generate SCG Test Questions.md  main.py  pyproject.toml  test_integration.py
planning/: __init__.py  ada_planner.py  base.py  lats.py  plan_solve.py  react.py  reflexion.py  tools.py
src/: mcp_client.py
