[project]
name = "scg-agent"
version = "0.1.0"
description = "Agentic system for code comprehension using Semantic Code Graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.1",
    "langchain-openai>=1.1.5",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "mcp>=1.1.0",
    "grandalf>=0.8",
]

[tool.uv.sources]
# scg-experiments = { path = "../scg-experiments", editable = true }
